HISTORY

(git master)

  * [Enter new changes just after this line - do not remove this line]

  ++ New features:

  2017-09-21: Kalle Olavi Niemitalo
  * sockets: add poll() implementation (patch #9450)

  2017-09-10: Joel Cunningham
  * sockets: add readv() implementation (task #14610)

  2017-08-04: Simon Goldschmidt
  * Clean up DHCP a bit: no need keep msg_out and msg_in as members in struct
    dhcp - they are used in a call stack only (p_out and options_out_len as well)

  2017-08-04: Simon Goldschmidt
  * pbuf: split pbuf_header(s16_t) into pbuf_add_header(size_t) and
    pbuf_remove_header(size_t)

  2017-07-20: Douglas
  * sys: deprecate sys_arch_sem_wait and sys_arch_mbox_fetch returning the
    time waited rather they are now defined to return != SYS_ARCH_TIMEOUT
    on success.

  2017-07-03: Jakub Schmidtke
  * tcp: added support for sending TCP SACKs

  2017-06-20: Joel Cunningham
  * netconn/netdb: added core locking support to netconn_gethostbyname (task #14523)

  2017-04-25: Simon Goldschmidt
  * dhcp: added two hooks for adding and parsing user defined DHCP options

  2017-04-25: Joel Cunningham
  * sockets: added CMSG and IP_PKTINFO for use with recvmsg (task #14247)

  2017-04-20: Joel Cunningham
  * tcp: added Appropriate Byte Counting support (task #14128)

  2017-04-11: Simon Goldschmidt
  * netconn/sockets: remove fatal error handling, fix asynchronous error handling,
    ensure data before RST can be received

  2017-03-02: Joel Cunningham
  * netconn/sockets: vectorize netconn_write for TCP, treating a vectored I/O write
    atomically in regards to TCP segmentation (patch #8882)

  2017-03-02: Simon Goldschmidt
  * netconn: added nonblocking accept/recv to netconn API (task #14396)

  2017-02-28: Simon Goldschmidt
  * Added LWIP_SINGLE_NETIF for small targets with only one netif

  2017-02-17: Simon Goldschmidt
  * Improved DNS_LOCAL_HOSTLIST interface

  2017-02-10: David van Moolenbroek